# youtube-summarizer

./: .gitignore  CMakeLists.txt  README.md
include/: ollama.h  summarize.h  urlhandler.h
src/: main.cpp  mainwindow.cpp  mainwindow.h  ollama.cpp  summarize.cpp  worker.cpp  worker.h
